apps/tdarr/base/tdarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tdarr
  template:
    metadata:
      labels:
        app: tdarr
    spec:
      containers:
        - name: tdarr
          image: ghcr.io/haveagitgat/tdarr:2.33.01
          ports:
            - containerPort: 8265 # Web UI
            - containerPort: 8266 # Tdarr Server
          volumeMounts:
            - name: tdarr-configs
              mountPath: /app/configs
            - name: tdarr-configs
              mountPath: /app/logs
            - name: tdarr-configs
              mountPath: /app/server
            - name: media
              mountPath: /media
            - name: transcode-cache
              mountPath: /shared
      volumes:
        - name: tdarr-configs
          persistentVolumeClaim:
            claimName: tdarr-config
        # Existing claim for media
        - name: media
          persistentVolumeClaim:
            claimName: servarr-jellyfin-media
        - name: transcode-cache
          persistentVolumeClaim:
            claimName: tdarr-shared
