apps/tdarr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
spec:
  selector:
    app: tdarr
  ports:
    - name: webui
      port: 8265
      targetPort: 8265
    - name: server
      port: 8266
      targetPort: 8266
  type: ClusterIP
