apps/tdarr/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdarr-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    hajimari.io/enable: "true"
    hajimari.io/appName: Tdarr
    hajimari.io/group: Media
    hajimari.io/icon: mdi:movie-cog
    hajimari.io/info: Media Transcoding
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tdarr.entropymaker.com
      secretName: entropymaker-com-tls
  rules:
    - host: tdarr.entropymaker.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tdarr
                port:
                  number: 8265
